--- a/src/pages/home/sectionSkills/skills.css
+++ b/src/pages/home/sectionSkills/skills.css
@@ -5,7 +5,7 @@
 .section-skills {
   display: flex;
   flex-direction: column;
-  padding-top: 2rem;
+  margin-top: 2rem;
   margin-bottom: 6em;
 }
 
@@ -106,7 +106,7 @@
 
 @media only screen and (max-width: 764px) {
   .section-skills {
-    margin-top: 4rem;
+    margin-top: 2rem;
     margin-bottom: 6em;
   }
 }
